gaia: update documentation for histogram toolbox.
Also add a simple control for the bin width and a few tweaks for edge
conditions.

--- a/applications/gaia/gaia.htx/index.html
+++ b/applications/gaia/gaia.htx/index.html
@@ -91,7 +91,7 @@
       </li>
 
       <li><a href="inspect.html">Inspecting image values</a><br>
-        Panel readouts, interactive slices, pixel table<br>
+        Panel readouts, interactive slices, pixel table, histograms<br>
       </li>
 
       <li><a href="graphics.html">Overlay graphics</a><br>
