--- a/applications/gaia/gaia.htx/inspect.html
+++ b/applications/gaia/gaia.htx/inspect.html
@@ -38,5 +38,12 @@ the box in which the image data values will be shown. Larger values
 will be slower to update.
 <p align="center"><img align="center" src="pixeltable.gif">
 
+<h3>Getting a histogram of a region</h3> 
+<p>This can be done using the 
+<a href="xyhistogramusage.html">"Histogram of XY region..."</a>
+option in the "Image-Analysis" menu. Follow the link for more details.
+</p>
+
+
 </body>
 </html>
