gaia: improve description of data limits used in the XY histogram

--- a/applications/gaia/gaia.htx/xyhistogramusage.html
+++ b/applications/gaia/gaia.htx/xyhistogramusage.html
@@ -11,8 +11,9 @@
     <p>
       This window displays a histogram of the image data bounded by the
       rectangle that you have drawn on the image. Normally this is with the
-      data limits of the main image, but you can optionally use all the data
-      range using the "Options->Use data limits" option.
+      data limits applied in the main image display, but you can optionally 
+      use the complete data range of the data in the rectangle using the
+      "Options->Use data limits" option.
     </p>
     <p>
       One other feature to control the histogram creation is the "Binning
