--- a/applications/gaia/gaia.htx/xyhistogramusage.html
+++ b/applications/gaia/gaia.htx/xyhistogramusage.html
@@ -12,8 +12,8 @@
       This window displays a histogram of the image data bounded by the
       rectangle that you have drawn on the image. Normally this is with the
       data limits applied in the main image display, but you can optionally 
-      use the complete data range of the data in the rectangle using the
-      "Options->Use data limits" option.
+      use the complete data range of the data in the rectangle by deselecting
+      the "Options->Use full data limits" option.
     </p>
     <p>
       One other feature to control the histogram creation is the "Binning
